检测在git的版本是否合本地一致

--- a/毕设前端/购买商品.html
+++ b/毕设前端/购买商品.html
@@ -374,7 +374,7 @@
   <!--从下方弹出的回复Div-->
   <form id="goodsEvaluateReplyForm" method="POST" enctype="multipart/form-data">
     <div class="goodsEvaluateReplyDownDiv">
-      <div class="goodsEvaluateReplyDownDiv-first"><span id="goodsEvaluateReplyDownDiv-first-span">回复: zazalu</span> <a id="goodsEvaluateReplyDownDiv-first-a2" href="javascript:;">关闭</a><a id="goodsEvaluateReplyDownDiv-first-a1" href="javascript:;">发送</a>        </div>
+      <div class="goodsEvaluateReplyDownDiv-first"><span id="goodsEvaluateReplyDownDiv-first-span">回复: zazalu</span> <a id="goodsEvaluateReplyDownDiv-first-a2" href="javascript:;">关闭</a><a id="goodsEvaluateReplyDownDiv-first-a1" href="javascript:;">发送</a></div>
       <div class="goodsEvaluateReplyDownDiv-uploadPicture" style="height: 0px">
         <ul style="height: inherit;" id="goodsEvaluateReplyDownDiv-uploadPicture-Ul">
           
@@ -391,6 +391,8 @@
     </div>
   </form>
   <!--回复Div结束-->
+  <!--弹出回复栏时候的遮罩-->
+  <div id="replyZheZhao"></div>
 
 
 
