--- a/毕设前端/商铺管理_修改商品.html
+++ b/毕设前端/商铺管理_修改商品.html
@@ -83,7 +83,7 @@
   <div id="content">
     <div id="content-header">
       <div id="breadcrumb"> <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a> <a href="#">商铺管理</a>
-        <a href="#" class="current">添加商品</a>
+        <a href="#" class="current">修改商品信息</a>
       </div>
     </div>
     <div class="container-fluid">
@@ -92,7 +92,7 @@
         <div class="span12">
           <div class="widget-box">
             <div class="widget-title"> <span class="icon"> <i class="icon-plus"></i> </span>
-              <h5>添加商品</h5>
+              <h5>修改商品信息</h5>
             </div>
             <div class="widget-content">
               <div class="widget-content nopadding">
