--- a/毕设前端/购买商品.html
+++ b/毕设前端/购买商品.html
@@ -374,10 +374,12 @@
   <!--从下方弹出的回复Div-->
   <form id="goodsEvaluateReplyForm" method="POST" enctype="multipart/form-data">
     <div class="goodsEvaluateReplyDownDiv">
-      <div class="goodsEvaluateReplyDownDiv-first"><span id="goodsEvaluateReplyDownDiv-first-span">回复: zazalu</span> <a id="goodsEvaluateReplyDownDiv-first-a2" href="javascript:;">关闭</a><a id="goodsEvaluateReplyDownDiv-first-a1" href="javascript:;">发送</a></div>
+      <div class="goodsEvaluateReplyDownDiv-first"><span id="goodsEvaluateReplyDownDiv-first-span">回复: zazalu</span> <a id="goodsEvaluateReplyDownDiv-first-a2" href="javascript:;">关闭</a>
+        <a id="goodsEvaluateReplyDownDiv-first-a1" href="javascript:;">发送</a>
+      </div>
       <div class="goodsEvaluateReplyDownDiv-uploadPicture" style="height: 0px">
         <ul style="height: inherit;" id="goodsEvaluateReplyDownDiv-uploadPicture-Ul">
-          
+
         </ul>
       </div>
       <div class="goodsEvaluateReplyDownDiv-second">
