--- a/毕设前端/后台管理_账户管理_浏览.html
+++ b/毕设前端/后台管理_账户管理_浏览.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/foot.css" />
   <link rel="stylesheet" href="css/zazaluhead.css" />
   <link rel="stylesheet" href="css/uniform.css">
-  <link rel="stylesheet" href="css/monthTrans.css">
+  <link rel="stylesheet" href="css/goodsMessageBrowse.css">
   <link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
 
@@ -72,8 +72,9 @@
     <!--<a href="#" class="visible-phone"><i class="icon icon-file"></i> Addons</a>-->
     <ul>
       <li><a href="index.html"><i class="icon icon-plus"></i> <span>广告管理</span></a> </li>
-      <li class="active"><a href="charts.html"><i class="icon icon-tag"></i> <span>月交易统计</span></a> </li>
-      <li><a href="widgets.html"><i class="icon icon-wrench"></i> <span>账户管理</span></a> </li>
+      <li><a href="charts.html"><i class="icon icon-tag"></i> <span>月交易统计</span></a> </li>
+      <li class="active"><a href="widgets.html"><i class="icon icon-wrench"></i> <span>账户管理</span></a> </li>
+
     </ul>
   </div>
 
@@ -81,7 +82,7 @@
   <div id="content">
     <div id="content-header">
       <div id="breadcrumb"> <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a> <a href="#">后台管理</a>
-        <a href="#" class="current">月交易统计</a>
+        <a href="#" class="current">账户管理</a>
       </div>
     </div>
     <div class="container-fluid">
@@ -90,22 +91,47 @@
         <div class="span12">
           <div class="widget-box">
             <div class="widget-title"> <span class="icon"> <i class="icon-plus"></i> </span>
-              <h5>月交易统计表格</h5>
+              <h5>用户列表</h5>
             </div>
             <div class="widget-content">
               <div class="widget-content nopadding">
                 <ul class="recent-posts">
                   <li class="recent-posts-goodsLi">
+                    <div class="user-thumb"> <img width="40" height="40" alt="User" src="img/goods/good1/goodImg430.jpg"> </div>
                     <div class="article-post">
-                      <p> 1月 / 交易额 :awdawd</p>
+                      <div class="fr"><a href="#" class="btn btn-primary btn-mini">封停</a> <a href="#" class="btn btn-danger btn-mini">删除</a></div>
+                      <span class="user-info"> 买方Id: 123132 / 买方名: zazalu / 买方性别: 男 </span>
+                      <p>买方地址: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
                     </div>
                   </li>
-
-                  <div class="form-actions">
-                    <select class="" style="width: 98px;">
-                        <option value="1"  >2017</option>
-                      </select>
-                  </div>
+                  <li class="recent-posts-goodsLi">
+                    <div class="user-thumb"> <img width="40" height="40" alt="User" src="img/goods/good1/goodImg430.jpg"> </div>
+                    <div class="article-post">
+                      <div class="fr"><a href="#" class="btn btn-primary btn-mini">Edit</a> <a href="#" class="btn btn-danger btn-mini">Delete</a></div>
+                      <span class="user-info"> 商品名: john Deo / 商品库存: 2  / 商品积分: 3  / 商品折扣: 0 </span>
+                      <p>This is a much longer one that will go on for a few lines.It has multiple paragraphs and is full of waffle to pad out the comment.</p>
+                    </div>
+                  </li>
+                  <li class="recent-posts-goodsLi">
+                    <div class="user-thumb"> <img width="40" height="40" alt="User" src="img/goods/good1/goodImg430.jpg"> </div>
+                    <div class="article-post">
+                      <div class="fr"><a href="#" class="btn btn-primary btn-mini">Edit</a> <a href="#" class="btn btn-danger btn-mini">Delete</a></div>
+                      <span class="user-info"> 商品名: john Deo / 商品库存: 2  / 商品积分: 3  / 商品折扣: 0 </span>
+                      <p>This is a much longer one that will go on for a few lines.It has multiple paragraphs and is full of waffle to pad out the comment.</p>
+                    </div>
+                  </li>
+                  <li class="recent-posts-goodsLi">
+                    <div class="user-thumb"> <img width="40" height="40" alt="User" src="img/goods/good1/goodImg430.jpg"> </div>
+                    <div class="article-post">
+                      <div class="fr"><a href="#" class="btn btn-primary btn-mini">Edit</a> <a href="#" class="btn btn-danger btn-mini">Delete</a></div>
+                      <span class="user-info"> 商品名: john Deo / 商品库存: 2  / 商品积分: 3  / 商品折扣: 0 </span>
+                      <p>This is a much longer one that will go on for a few lines.It has multiple paragraphs and is full of waffle to pad out the comment.</p>
+                    </div>
+                  </li>
+                  <li class="recent-posts-goodsLi">
+                    <input type="text" class="span2" placeholder="按买方名查找"  style="margin-bottom: 0px;"/>
+                    <button class="btn btn-success">查找</button>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -149,8 +175,9 @@
   <script src="js/shouyeAdsPicture.js"></script>
   <script src="js/zazaluMusic.js"></script>
   <script src="js/zazaluSearch.js"></script>
-  <script src="js/jquery.animate-shadow.js"></script>
-  <script src="js/monthTrans.js"></script>
+  <!--保证文件选择后显示选择图片名的js-->
+  <script src="js/jquery.uniform.js"></script>
+  <script src="js/matrix.form_common.js"></script>
 
 </body>
 
